--- a/frontend/apps/apiboss/apibossapp/views/apiboss-designer/dialogs/dialog_api.page
+++ b/frontend/apps/apiboss/apibossapp/views/apiboss-designer/dialogs/dialog_api.page
@@ -20,6 +20,8 @@ SCHEMA
                 "dialogTheme": "encodeURIComponent(url(../apibossapp/views/apiboss-designer/dialogs/dialogPropertiesPrompt.json))" },
     "rest":    {"html":"text-div","text":"REST API"},
     "isrestapi": {"html":"drop-down","style":"width:100%; height:100%;","list":"[{'value':'YES'},{'value':'NO'}]","text":"Select One","styleBody":"select#choices{padding:12px}","class":"validate"},
+    "region":    {"html":"text-div","text":"Region"},
+    "selectregion": {"html":"drop-down","style":"width:100%; height:100%;","list":"[{'value':'Default'},{'value':'SG - Singapore'}]","text":"Select Region","styleBody":"select#choices{padding:12px}","class":"validate"},
     "content": {"html":"text-div","text":"Custom Content Type"},
     "contentinput": {"html":"input", "type":"text",  "spellcheck":"false"},
     "input-output":{"html":"input-output-fields"}
@@ -45,13 +47,15 @@ LAYOUT
 ------------------------------------------------------
 |   passthrough         |     rest    | isrestapi    |
 ------------------------------------------------------
-|   passthrough         | content     | contentinput |
+|   passthrough         | region      | selectregion |
+------------------------------------------------------
+|   content             | contentinput               |
 ------------------------------------------------------
 |                  input-output                      |
 ------------------------------------------------------
 =================
-Row Heights = 4em, 4em, 4em, 4em, 9.5em,5.5em,5em,20em
-Col Widths = 55%, 20%, 5% , 20%
+Row Heights = 4em, 4em, 4em, 4em, 9.5em,5.5em,5em,4em,20em
+Col Widths = 20%, 35%, 20%, 5% , 20%
 =================
 
 
@@ -92,7 +96,7 @@ CSS
 
 ::placeholder {opacity: 0.8;}
 
-.class-exposedmethod,.class-backendurlmethod,.class-isrestapi{
+.class-exposedmethod,.class-backendurlmethod,.class-isrestapi,.class-selectregion{
      padding: 3px 20px 0px 0px;
 }
 
@@ -125,26 +129,31 @@ CSS
 }
 .item8{
   overflow-y: auto;
+  grid-column: 1 / 3;
 }
 .item9, .item11{
+  grid-column: 3 / 4;
   margin-top: auto;
   margin-bottom: auto;
 }
 
 
 .item10 {
-  grid-column: 3/6;
+  grid-column: 4/6;
   margin-top:auto;
   margin-bottom:auto;
 }
 
 .item12 {
-  grid-column: 3/6;
+  grid-column: 4/6;
   margin-top:auto;
   margin-bottom:auto;
 
 }
-.item13 {
+.item14{
+  grid-column: 2 / 6;
+}
+.item15 {
   grid-column: 1 / 6;
 }
 
