--- a/frontend/apps/apiboss/apibossapp/views/apiboss-designer/dialogs/dialog_api.page
+++ b/frontend/apps/apiboss/apibossapp/views/apiboss-designer/dialogs/dialog_api.page
@@ -21,7 +21,7 @@ SCHEMA
     "rest":    {"html":"text-div","text":"REST API"},
     "isrestapi": {"html":"drop-down","style":"width:100%; height:100%;","list":"[{'value':'YES'},{'value':'NO'}]","text":"Select One","styleBody":"select#choices{padding:12px}","class":"validate"},
     "region":    {"html":"text-div","text":"Region"},
-    "selectregion": {"html":"drop-down","style":"width:100%; height:100%;","list":"[{'value':'Default'},{'value':'SG - Singapore'}]","text":"Select Region","styleBody":"select#choices{padding:12px}","class":"validate"},
+    "selectregion": {"html":"drop-down","style":"width:100%; height:100%;","list":"[{'value':'Default'},{'value':'Singapore'}]","text":"Select Region","styleBody":"select#choices{padding:12px}","class":"validate"},
     "content": {"html":"text-div","text":"Custom Content Type"},
     "contentinput": {"html":"input", "type":"text",  "spellcheck":"false"},
     "input-output":{"html":"input-output-fields"}
